control-center-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: control-center-ingress
  annotations:
    kubernetes.io/ingress.class: nginx          
spec:
  tls:
   - hosts:
       - confluent-control-center.local.cluster 
  rules:
    - host: confluent-control-center.local.cluster
      http:
        paths:
          - backend:
              serviceName: kafka-cp-control-center
              servicePort: 9021
            path: /
